neutron (2:8.1.3~dev44-0ubuntu1) UNRELEASED; urgency=medium

  [ Corey Bryant ]
  * New upstream version.
  * d/p/skip-test-secure-client.patch:  Skip test_secure_client until
    upstream bug is resolved.

  [ James Page ]
  * New upstream version.

 -- Corey Bryant <corey.bryant@canonical.com>  Mon, 11 Jul 2016 15:32:41 -0400

neutron (2:8.1.2-0ubuntu1) xenial; urgency=medium

  * New upstream point release for OpenStack Mitaka (LP: #1591248).

 -- David Della Vecchia <ddv@canonical.com>  Fri, 10 Jun 2016 12:17:08 -0400

neutron (2:8.1.0-0ubuntu0.16.04.2) xenial; urgency=medium

  [ David Della Vecchia ]
  * New upstream point release for OpenStack Mitaka (LP: #1580674).

  [ Corey Bryant ]
  * d/changelog: Change package version to 2:8.1.0-0ubuntu0.16.04.1 in order
    to not conflict with yakkety version 2:8.1.0-0ubuntu1.
  * d/rules: Switch to using ostestr for unit test execution to avoid races.

 -- Corey Bryant <corey.bryant@canonical.com>  Wed, 18 May 2016 08:16:42 -0400

neutron (2:8.0.0-0ubuntu1) xenial; urgency=medium

  * New upstream release for OpenStack Mitaka.
  * d/p/drop-ryu-dep.patch: Rebased.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 07 Apr 2016 14:17:32 -0400

neutron (2:8.0.0~rc1-0ubuntu1) xenial; urgency=medium

  * New upstream release candidate for OpenStack Mitaka.
  * d/p/autogenerate-macvtap-agent-config-file.patch: Dropped. Fixed upstream.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 24 Mar 2016 08:31:46 -0400

neutron (2:8.0.0~b3-0ubuntu1) xenial; urgency=medium

  * New upstream milestone for OpenStack Mitaka.
  * d/control: Align (Build-)Depends with upstream.
  * d/p/ensure-tunnels-fully-reset.patch: Dropped. Fixed upstream.
  * d/p/*: Rebased.
  * d/p/skip-ryu-tests.patch: Skip ryu tests.
  * d/control, d/neutron-bgp-dragent.*: Add new binary package and install/init
    files for BGP Dynamic Routing agent.
  * d/control, d/neutron-macvtap-agent.*: Add new binary package and install/init