@@ -6,12 +6,13 @@ Forwarded: not-needed
 
 --- a/neutron/tests/unit/services/bgp/driver/ryu/test_driver.py
 +++ b/neutron/tests/unit/services/bgp/driver/ryu/test_driver.py
-@@ -14,13 +14,21 @@
- # limitations under the License.
+@@ -16,14 +16,22 @@
+ import six
  
  import mock
 +import testtools
  from oslo_config import cfg
+ from oslo_utils import encodeutils
 -from ryu.services.protocols.bgp import bgpspeaker
 -from ryu.services.protocols.bgp.rtconf.neighbors import CONNECT_MODE_ACTIVE
 +try:
@@ -31,7 +32,7 @@ Forwarded: not-needed
  from neutron.tests import base
  
  # Test variables for BGP Speaker
-@@ -41,6 +49,7 @@ FAKE_NEXTHOP = '5.5.5.5'
+@@ -44,6 +52,7 @@
  
  class TestRyuBgpDriver(base.BaseTestCase):
  
